--- a/blogsite/static/style.css
+++ b/blogsite/static/style.css
@@ -5,3 +5,13 @@
     background-size: cover;
     height: 100vh;
 }
+  .logout {
+      display: inline;
+      background: none;
+      border: none;
+      padding: 0;
+      font: inherit;
+      color: white; /* Adjust the color as needed */
+      text-decoration: none;
+      cursor: pointer;
+  }
