--- a/blogsite/templates/partials/nav.html
+++ b/blogsite/templates/partials/nav.html
@@ -1,3 +1,16 @@
+<style>
+  .logout {
+      display: inline;
+      background: none;
+      border: none;
+      padding: 0;
+      font: inherit;
+      color: white; /* Adjust the color as needed */
+      text-decoration: none;
+      cursor: pointer;
+  }
+</style>
+
 <nav class="navbar navbar-expand-lg navbar-primary bg-primary fixed-top">
   <div class="container">
       {% if request.user.is_authenticated %}
@@ -15,7 +28,12 @@
           <a class="nav-link text-white" href="{% url 'users-profile'%}">Profile <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="{% url 'users-logout' %}">Logout</a>
+          <form action="{% url 'users-logout' %}" method="POST" id ="logout" class="nav-link">
+            {% csrf_token %}
+            <!-- <input class="logout" type="submit" value="Logout"> -->
+            <span id="logout" class="logout" onclick="document.getElementById('logout').submit()">Logout</span>
+        </form>
+          <!-- <a class="nav-link text-white" href="{% url 'users-logout' %}">Logout</a> -->
         </li>
       </ul>
       {% else %}
