--- a/blogsite/templates/partials/nav.html
+++ b/blogsite/templates/partials/nav.html
@@ -25,6 +25,9 @@
           <a class="nav-link text-white" href="{% url 'new-post'%}">New Post<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
+          <a class="nav-link text-white" href="{% url 'approve-post'%}">Approve Posts <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
           <a class="nav-link text-white" href="{% url 'users-profile'%}">Profile <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
