--- a/blogsite/templates/partials/nav.html
+++ b/blogsite/templates/partials/nav.html
@@ -24,9 +24,11 @@
         <li class="nav-item active">
           <a class="nav-link text-white" href="{% url 'new-post'%}">New Post<span class="sr-only">(current)</span></a>
         </li>
+        {% if request.user.profilemodel.role == 'ADMIN' %}
         <li class="nav-item active">
           <a class="nav-link text-white" href="{% url 'approve-post'%}">Approve Posts <span class="sr-only">(current)</span></a>
         </li>
+        {% endif %}
         <li class="nav-item active">
           <a class="nav-link text-white" href="{% url 'users-profile'%}">Profile <span class="sr-only">(current)</span></a>
         </li>
