--- a/blogsite/templates/partials/nav.html
+++ b/blogsite/templates/partials/nav.html
@@ -28,6 +28,9 @@
         <li class="nav-item active">
           <a class="nav-link text-white" href="{% url 'approve-post'%}">Approve Posts <span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link text-white" href="{% url 'manage-users'%}">Manage Users <span class="sr-only">(current)</span></a>
+        </li>
         {% endif %}
         <li class="nav-item active">
           <a class="nav-link text-white" href="{% url 'users-profile'%}">Profile <span class="sr-only">(current)</span></a>
