--- a/blogsite/templates/users/list.html
+++ b/blogsite/templates/users/list.html
@@ -5,6 +5,7 @@
 <div class="container">
     <div class="row mt-5 pt-3 justify-content-center">
         <div class="col-md-8">
+            
             {% for user in users %}
             <div class="card shadow my-2">
                 <div class="card-body">
@@ -15,6 +16,12 @@
                                     <strong>{{ user.user.username }}</strong>
                                     <p>Email: {{ user.user.email }}</p>
                                     <p>User Role: {{ user.role }}</p>
+                                    <form method="post" action="{% url 'manage-users' %}">
+                                        {% csrf_token %}
+                                        {{ form.as_p }}
+                                    
+                                        <button type="submit">Save Roles</button>
+                                      </form>
                                 </div>
                             </div>
                         </div>
