--- a/blogsite/templates/blog/approve_post.html
+++ b/blogsite/templates/blog/approve_post.html
@@ -1,5 +1,5 @@
 {% extends 'partials/base.html' %}
-{% block title %}Home Page{% endblock %}
+{% block title %}Approve Post Page{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="container">
