--- a/blogsite/templates/users/user_detail.html
+++ b/blogsite/templates/users/user_detail.html
@@ -1,5 +1,5 @@
 {% extends 'partials/base.html' %}
-{% block title %}Profile Page{% endblock %}
+{% block title %}User Details Page{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="container">
@@ -10,7 +10,7 @@
         <span class="h4">Profile Page</span>
         <span>
             <button type="button" class="btn btn-info btn-sm float-right" data-toggle="modal" data-target="#exampleModal">
-                Edit Profile
+                Edit 
             </button>       
         </span>
         <!-- Button trigger modal -->
@@ -18,11 +18,12 @@
         <hr>
         <div class="row">
             <div class="col-md-4">
-                <img class="img-thumbnail" src="{{ user.profilemodel.image.url }}" alt="profile-img">
+                <img class="img-thumbnail" src="{{ user.image.url }}" alt="profile-img">
             </div>
             <div class="col-md-8">
-                <h4>Name: {{ user.username}}</h4>
-                <h4>Email: {{ user.email}}</h4>
+                <h4>Name: {{ user.user.username}}</h4>
+                <h4>Email: {{ user.user.email}}</h4>
+                <h4>Current Role: {{ user.role}}</h4>
             </div>
         </div>
     </div>
@@ -52,7 +53,6 @@
                 <form method="POST" enctype="multipart/form-data">
                   {% csrf_token %}
                   {{ u_form|crispy }}
-                  {{ p_form|crispy }}
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Cancel</button>
                     <button type="submit" class="btn btn-primary btn-sm">Confirm</button>
