--- a/blogsite/templates/blog/index.html
+++ b/blogsite/templates/blog/index.html
@@ -4,6 +4,17 @@
 {% block content %}
 <div class="container">
     <div class="row mt-5 pt-3 justify-content-center">
+        {% if messages %}
+        <div class="alert alert-success alert-dismissible fade show col-md-8" role="alert">
+            {% for message in messages %}
+            {{ message }}
+             {% endfor %}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+        {% endif %}
+         
         <div class="col-md-8">
             {% for post in posts %}
             <div class="card shadow my-2">
