--- a/blogsite/templates/users/login.html
+++ b/blogsite/templates/users/login.html
@@ -4,11 +4,28 @@
 {% block content %}
 <div class="cover">
 <div class="container">
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
     <div class="row mt-5 pt-3">
         <div class="col-md-5 offset-md-6">
 <div class="card my-3 shadow" >
     <div class="card-body">
+         {% if messages %}
+        <div class="alert alert-success alert-dismissible fade show col-md-12" role="alert">
+            {% for message in messages %}
+            {{ message }}
+             {% endfor %}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+        {% endif %}
         <h4>Login Page</h4>
+        
         <hr>
         <form method="POST">
             {% csrf_token %}
