--- a/blogsite/templates/blog/post_detail.html
+++ b/blogsite/templates/blog/post_detail.html
@@ -7,6 +7,16 @@
         <div class="col-md-8 offset-md-2">
 <div class="card my-3 shadow" >
     <div class="card-body">
+      {% if messages %}
+        <div class="alert alert-success alert-dismissible fade show col-md-12" role="alert">
+            {% for message in messages %}
+            {{ message }}
+             {% endfor %}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+        {% endif %}
         <div class="col-md-12">
             <div class="col-md-12 row">
               
