--- a/blogsite/templates/users/user_detail.html
+++ b/blogsite/templates/users/user_detail.html
@@ -7,7 +7,17 @@
         <div class="col-md-6 offset-md-3">
 <div class="card my-3 shadow" >
     <div class="card-body">
-        <span class="h4">Profile Page</span>
+      {% if messages %}
+      <div class="alert alert-success alert-dismissible fade show col-md-12" role="alert">
+          {% for message in messages %}
+          {{ message }}
+           {% endfor %}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
+      {% endif %}
+        <span class="h4">User Profile Page</span>
         <span>
             <button type="button" class="btn btn-info btn-sm float-right" data-toggle="modal" data-target="#exampleModal">
                 Edit 
