--- a/blogsite/templates/blog/post_detail.html
+++ b/blogsite/templates/blog/post_detail.html
@@ -7,7 +7,7 @@
         <div class="col-md-8 offset-md-2">
 <div class="card my-3 shadow" >
     <div class="card-body">
-      {% if messages %}
+      <!-- {% if messages %}
         <div class="alert alert-success alert-dismissible fade show col-md-12" role="alert">
             {% for message in messages %}
             {{ message }}
@@ -16,7 +16,7 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-        {% endif %}
+        {% endif %} -->
         <div class="col-md-12">
             <div class="col-md-12 row">
               
@@ -47,16 +47,26 @@
               </div>
 
             <div class="col-md-12 pt-2">
-              
-               
+
+                <h4>{{ post.title }}</h4>
                 <img class="img-thumbnail" src="{{ post.image.url }}" alt="post_img">
                 
 
 
-                <h4>{{ post.title }}</h4>
+                
                 <p>
                     {{ post.content }}
                 </p>
+
+            {{ formset.management_form }}
+            {% for form in formset %}
+
+            <img class="img-thumbnail" src="{{ form.instance.image.url }}" alt="Post Section Image">
+            <p>
+              {{form.instance.content}}
+            </p>
+            
+            {% endfor %}
             </div>
         </div>
         <p class="mt-3">
